# serial_monitor

./: .gitignore  Cargo.toml  README.md
message_parser_macros/: Cargo.toml
message_parser_macros/src/: lib.rs
src/: codec.rs  error.rs  interface.rs  main.rs  opt.rs
src/atellica/: enums.rs  footer.rs  header.rs  info.rs  message.rs  mod.rs  payload.rs  urap_tube.rs  utils.rs
src/atellica/messages/: mod.rs
src/atellica/messages/add_queue/: add_queue_request.rs  add_queue_response.rs  mod.rs
