[package]
name = "serial_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
chrono = "0.4.38"
futures = "0.3.30"
futures-util = "0.3.30"
match_cast = "0.1.2"
num_enum = "0.7.3"
regex-lite = "0.1.6"
structopt = "0.3.26"
strum = { version = "0.26.3", features = ["derive"] }
tokio = {version = "1.40.0", features = ["full"]}
tokio-serial = "5.4.4"
tokio-util = {version = "0.7.11", features = ["codec"]}
